--- a/frontend/functions/package.json
+++ b/frontend/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
@@ -14,9 +15,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "file-type": "^21.0.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "firebase-tools": "^14.17.0",
+    "heic-convert": "^2.1.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
